apps/main/auth/vaultwarden-patches/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vaultwarden
spec:
  hosts:
  - vault.${PUBLIC_DOMAIN}
  gateways:
  - auth-ingress
